From a376965 (closure-adv):
==========================

In prisim/closure.py,

(*) Import Time module from astropy
(*) In function npz2hdf5(), read in LST and days as instances of
astropy Time class
(*) In member function smooth_in_tbins() of class ClosurePhase,
add input keyword daybinsize. Update member function docstring
accordingly
(*) In member function smooth_in_tbins() of class ClosurePhase,
process smoothing along both the Day and LST axes.

From 544995b (closure-adv):
==========================

In prisim/closure.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, and
everywhere else, edit all occurrences of tbin to lstbin, including
input tbinsize. Update docstring accordingly

From da41b53 (closure-adv):
==========================

In prisim/closure.py,

(*) Modify attributes of class ClosurePhase to adjust for the new
NPZ format. Update class docstring accordingly
(*) Modify __init__() member function of class ClosurePhase to adjust
for the new NPZ format. Update member function docstring accordingly

From d8380ca (closure):
======================

In prisim/closure.py,

(*) In function npz2hdf5(), process based on new NPZ file format.
Update docstring accordingly
(*) Convert Local Apparent Sidereal Time to MJD from CASA convention
by subtracting 6713.

From 78419d3 (closure):
======================

In prisim/closure.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum, add
input keyword apply_flags to include or exclude flag information in
the delay transform. Update member function docstring accordingly.
Process flags accordingly

From c40eac9 (closure):
======================

In prisim/closure.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
include flag weights in the Fourier transform

From 256f4aa (closure):
======================

In prisim/closure.py,

(*) Add keys 'tbins' and 'dtbins' in attribute dictionary cpinfo of
class ClosurePhase. Update docstring of class ClosurePhase accordingly